--- a/index.html
+++ b/index.html
@@ -5,30 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" href="index.css">
+
   <title>Frontend Mentor | Blog preview card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    body {background-color: hsl(47, 88%, 63%);}
+    p{font-weight: bold;}
   </style>
 </head>
 <body>
 
+  <div id="card">
+    
+      <img src="./assets/images/illustration-article.svg" alt="illustration-article" id="card_image">
+    
+<div id="content">
+<p class="Learning">
   Learning
-
+</p>
   Published 21 Dec 2023
 
   HTML & CSS foundations
 
   These languages are the backbone of every website, defining structure, content, and presentation.
 
-  Greg Hooper
-  
+  <p>
+  <img src="./assets/images/image-avatar.webp" alt="men">Greg Hooper
+  </p>
+  </div>
+  </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Riya Gandhi</a>.
   </div>
 </body>
 </html>
